// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreationProgress renders correctly with all selected 1`] = `
<DocumentFragment>
  .cache-8fgrj3-StyledContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.cache-8fgrj3-StyledContainer .e13ux8wu4 {
  height: 32px;
  width: 32px;
  font-size: 16px;
  line-height: 1;
  border-width: 3px;
}

.cache-8fgrj3-StyledContainer .e13ux8wu5 {
  margin: 0 8px;
  width: 32px;
  white-space: nowrap;
}

.cache-8fgrj3-StyledContainer .e13ux8wu5:first-of-type {
  margin-left: 0px;
}

.cache-8fgrj3-StyledContainer .e13ux8wu5:last-of-type {
  margin-right: 0px;
}

.cache-8fgrj3-StyledContainer .e13ux8wu1 {
  height: 4px;
  margin-top: 14px;
  margin-bottom: 14px;
}

.cache-8fgrj3-StyledContainer .e13ux8wu3 {
  margin-top: 16px;
  font-size: 16px;
}

.cache-64yl8v-StyledStepContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.cache-1i14971-StyledStep-temporalStepStyles {
  border-radius: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background-color: #22c8a2;
}

.cache-ub7j99-StyledIcon-sizeStyles {
  fill: #ffffff;
  height: 20px;
  width: 20px;
  min-width: 20px;
  min-height: 20px;
}

.cache-ub7j99-StyledIcon-sizeStyles.cache-ub7j99-StyledIcon-sizeStyles {
  vertical-align: middle;
}

.cache-iqnvfc-StyledText {
  margin-top: 16px;
  font-size: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  text-align: center;
}

.cache-1onazp5-StyledLine {
  border-radius: 2px;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  border-radius: 2px;
  background-color: #d4dae7;
  position: relative;
}

.cache-1onazp5-StyledLine::after {
  content: '';
  position: absolute;
  left: 0;
  top: 0;
  height: 100%;
  border-radius: 2px;
  background-color: #22c8a2;
  width: 100%;
}

<div
    class="cache-8fgrj3-StyledContainer e13ux8wu0"
  >
    <div
      class="cache-64yl8v-StyledStepContainer e13ux8wu5"
    >
      <div
        class="cache-1i14971-StyledStep-temporalStepStyles e13ux8wu4"
      >
        <svg
          class="sc-ui-icon etwatq50 cache-ub7j99-StyledIcon-sizeStyles"
          viewBox="0 0 24 24"
        >
          <path
            d="M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z"
          />
        </svg>
      </div>
      <div
        class="cache-iqnvfc-StyledText e13ux8wu3"
      >
        Step 1
      </div>
    </div>
    <div
      class="cache-1onazp5-StyledLine e13ux8wu1"
    />
    <div
      class="cache-64yl8v-StyledStepContainer e13ux8wu5"
    >
      <div
        class="cache-1i14971-StyledStep-temporalStepStyles e13ux8wu4"
      >
        <svg
          class="sc-ui-icon etwatq50 cache-ub7j99-StyledIcon-sizeStyles"
          viewBox="0 0 24 24"
        >
          <path
            d="M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z"
          />
        </svg>
      </div>
      <div
        class="cache-iqnvfc-StyledText e13ux8wu3"
      >
        Step 2
      </div>
    </div>
    <div
      class="cache-1onazp5-StyledLine e13ux8wu1"
    />
    <div
      class="cache-64yl8v-StyledStepContainer e13ux8wu5"
    >
      <div
        class="cache-1i14971-StyledStep-temporalStepStyles e13ux8wu4"
      >
        <svg
          class="sc-ui-icon etwatq50 cache-ub7j99-StyledIcon-sizeStyles"
          viewBox="0 0 24 24"
        >
          <path
            d="M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z"
          />
        </svg>
      </div>
      <div
        class="cache-iqnvfc-StyledText e13ux8wu3"
      >
        Step 3
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CreationProgress renders correctly with default props 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  from {
    width: 0;
  }

  to {
    width: 100%;
  }
}

.cache-8fgrj3-StyledContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.cache-8fgrj3-StyledContainer .e13ux8wu4 {
  height: 32px;
  width: 32px;
  font-size: 16px;
  line-height: 1;
  border-width: 3px;
}

.cache-8fgrj3-StyledContainer .e13ux8wu5 {
  margin: 0 8px;
  width: 32px;
  white-space: nowrap;
}

.cache-8fgrj3-StyledContainer .e13ux8wu5:first-of-type {
  margin-left: 0px;
}

.cache-8fgrj3-StyledContainer .e13ux8wu5:last-of-type {
  margin-right: 0px;
}

.cache-8fgrj3-StyledContainer .e13ux8wu1 {
  height: 4px;
  margin-top: 14px;
  margin-bottom: 14px;
}

.cache-8fgrj3-StyledContainer .e13ux8wu3 {
  margin-top: 16px;
  font-size: 16px;
}

.cache-64yl8v-StyledStepContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.cache-1i14971-StyledStep-temporalStepStyles {
  border-radius: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background-color: #22c8a2;
}

.cache-ub7j99-StyledIcon-sizeStyles {
  fill: #ffffff;
  height: 20px;
  width: 20px;
  min-width: 20px;
  min-height: 20px;
}

.cache-ub7j99-StyledIcon-sizeStyles.cache-ub7j99-StyledIcon-sizeStyles {
  vertical-align: middle;
}

.cache-iqnvfc-StyledText {
  margin-top: 16px;
  font-size: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  text-align: center;
}

.cache-1lwhthm-StyledLine-loadingStyle {
  border-radius: 2px;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  border-radius: 2px;
  background-color: #d4dae7;
  position: relative;
}

.cache-1lwhthm-StyledLine-loadingStyle::after {
  content: '';
  position: absolute;
  left: 0;
  top: 0;
  height: 100%;
  border-radius: 2px;
  background-color: #22c8a2;
  -webkit-animation: animation-0 1s linear infinite;
  animation: animation-0 1s linear infinite;
}

.cache-1k0r1aw-StyledStep-temporalStepStyles {
  border-radius: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background-color: transparent;
  border-style: solid;
  border-color: #d4dae7;
}

.cache-10y1xlz-StyledFutureInternalDot {
  background-color: #d4dae7;
  height: 7px;
  width: 7px;
  border-radius: 16px;
}

.cache-rgwnp4-StyledLine {
  border-radius: 2px;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  border-radius: 2px;
  background-color: #d4dae7;
  position: relative;
}

.cache-rgwnp4-StyledLine::after {
  content: '';
  position: absolute;
  left: 0;
  top: 0;
  height: 100%;
  border-radius: 2px;
  background-color: #22c8a2;
}

<div
    class="cache-8fgrj3-StyledContainer e13ux8wu0"
  >
    <div
      class="cache-64yl8v-StyledStepContainer e13ux8wu5"
    >
      <div
        class="cache-1i14971-StyledStep-temporalStepStyles e13ux8wu4"
      >
        <svg
          class="sc-ui-icon etwatq50 cache-ub7j99-StyledIcon-sizeStyles"
          viewBox="0 0 24 24"
        >
          <path
            d="M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z"
          />
        </svg>
      </div>
      <div
        class="cache-iqnvfc-StyledText e13ux8wu3"
      >
        Step 1
      </div>
    </div>
    <div
      class="cache-1lwhthm-StyledLine-loadingStyle e13ux8wu1"
    />
    <div
      class="cache-64yl8v-StyledStepContainer e13ux8wu5"
    >
      <div
        class="cache-1k0r1aw-StyledStep-temporalStepStyles e13ux8wu4"
      >
        <div
          class="cache-10y1xlz-StyledFutureInternalDot e13ux8wu2"
        />
      </div>
      <div
        class="cache-iqnvfc-StyledText e13ux8wu3"
      >
        Step 2
      </div>
    </div>
    <div
      class="cache-rgwnp4-StyledLine e13ux8wu1"
    />
    <div
      class="cache-64yl8v-StyledStepContainer e13ux8wu5"
    >
      <div
        class="cache-1k0r1aw-StyledStep-temporalStepStyles e13ux8wu4"
      >
        <div
          class="cache-10y1xlz-StyledFutureInternalDot e13ux8wu2"
        />
      </div>
      <div
        class="cache-iqnvfc-StyledText e13ux8wu3"
      >
        Step 3
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CreationProgress renders correctly with selected prop 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  from {
    width: 0;
  }

  to {
    width: 100%;
  }
}

.cache-8fgrj3-StyledContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.cache-8fgrj3-StyledContainer .e13ux8wu4 {
  height: 32px;
  width: 32px;
  font-size: 16px;
  line-height: 1;
  border-width: 3px;
}

.cache-8fgrj3-StyledContainer .e13ux8wu5 {
  margin: 0 8px;
  width: 32px;
  white-space: nowrap;
}

.cache-8fgrj3-StyledContainer .e13ux8wu5:first-of-type {
  margin-left: 0px;
}

.cache-8fgrj3-StyledContainer .e13ux8wu5:last-of-type {
  margin-right: 0px;
}

.cache-8fgrj3-StyledContainer .e13ux8wu1 {
  height: 4px;
  margin-top: 14px;
  margin-bottom: 14px;
}

.cache-8fgrj3-StyledContainer .e13ux8wu3 {
  margin-top: 16px;
  font-size: 16px;
}

.cache-64yl8v-StyledStepContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.cache-1i14971-StyledStep-temporalStepStyles {
  border-radius: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background-color: #22c8a2;
}

.cache-ub7j99-StyledIcon-sizeStyles {
  fill: #ffffff;
  height: 20px;
  width: 20px;
  min-width: 20px;
  min-height: 20px;
}

.cache-ub7j99-StyledIcon-sizeStyles.cache-ub7j99-StyledIcon-sizeStyles {
  vertical-align: middle;
}

.cache-iqnvfc-StyledText {
  margin-top: 16px;
  font-size: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  text-align: center;
}

.cache-1onazp5-StyledLine {
  border-radius: 2px;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  border-radius: 2px;
  background-color: #d4dae7;
  position: relative;
}

.cache-1onazp5-StyledLine::after {
  content: '';
  position: absolute;
  left: 0;
  top: 0;
  height: 100%;
  border-radius: 2px;
  background-color: #22c8a2;
  width: 100%;
}

.cache-1lwhthm-StyledLine-loadingStyle {
  border-radius: 2px;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  border-radius: 2px;
  background-color: #d4dae7;
  position: relative;
}

.cache-1lwhthm-StyledLine-loadingStyle::after {
  content: '';
  position: absolute;
  left: 0;
  top: 0;
  height: 100%;
  border-radius: 2px;
  background-color: #22c8a2;
  -webkit-animation: animation-0 1s linear infinite;
  animation: animation-0 1s linear infinite;
}

.cache-1k0r1aw-StyledStep-temporalStepStyles {
  border-radius: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background-color: transparent;
  border-style: solid;
  border-color: #d4dae7;
}

.cache-10y1xlz-StyledFutureInternalDot {
  background-color: #d4dae7;
  height: 7px;
  width: 7px;
  border-radius: 16px;
}

.cache-rgwnp4-StyledLine {
  border-radius: 2px;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  border-radius: 2px;
  background-color: #d4dae7;
  position: relative;
}

.cache-rgwnp4-StyledLine::after {
  content: '';
  position: absolute;
  left: 0;
  top: 0;
  height: 100%;
  border-radius: 2px;
  background-color: #22c8a2;
}

<div
    class="cache-8fgrj3-StyledContainer e13ux8wu0"
  >
    <div
      class="cache-64yl8v-StyledStepContainer e13ux8wu5"
    >
      <div
        class="cache-1i14971-StyledStep-temporalStepStyles e13ux8wu4"
      >
        <svg
          class="sc-ui-icon etwatq50 cache-ub7j99-StyledIcon-sizeStyles"
          viewBox="0 0 24 24"
        >
          <path
            d="M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z"
          />
        </svg>
      </div>
      <div
        class="cache-iqnvfc-StyledText e13ux8wu3"
      >
        Step 1
      </div>
    </div>
    <div
      class="cache-1onazp5-StyledLine e13ux8wu1"
    />
    <div
      class="cache-64yl8v-StyledStepContainer e13ux8wu5"
    >
      <div
        class="cache-1i14971-StyledStep-temporalStepStyles e13ux8wu4"
      >
        <svg
          class="sc-ui-icon etwatq50 cache-ub7j99-StyledIcon-sizeStyles"
          viewBox="0 0 24 24"
        >
          <path
            d="M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z"
          />
        </svg>
      </div>
      <div
        class="cache-iqnvfc-StyledText e13ux8wu3"
      >
        Step 2
      </div>
    </div>
    <div
      class="cache-1lwhthm-StyledLine-loadingStyle e13ux8wu1"
    />
    <div
      class="cache-64yl8v-StyledStepContainer e13ux8wu5"
    >
      <div
        class="cache-1k0r1aw-StyledStep-temporalStepStyles e13ux8wu4"
      >
        <div
          class="cache-10y1xlz-StyledFutureInternalDot e13ux8wu2"
        />
      </div>
      <div
        class="cache-iqnvfc-StyledText e13ux8wu3"
      >
        Step 3
      </div>
    </div>
    <div
      class="cache-rgwnp4-StyledLine e13ux8wu1"
    />
  </div>
</DocumentFragment>
`;

exports[`CreationProgress renders correctly with steps number 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  from {
    width: 0;
  }

  to {
    width: 100%;
  }
}

.cache-8fgrj3-StyledContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.cache-8fgrj3-StyledContainer .e13ux8wu4 {
  height: 32px;
  width: 32px;
  font-size: 16px;
  line-height: 1;
  border-width: 3px;
}

.cache-8fgrj3-StyledContainer .e13ux8wu5 {
  margin: 0 8px;
  width: 32px;
  white-space: nowrap;
}

.cache-8fgrj3-StyledContainer .e13ux8wu5:first-of-type {
  margin-left: 0px;
}

.cache-8fgrj3-StyledContainer .e13ux8wu5:last-of-type {
  margin-right: 0px;
}

.cache-8fgrj3-StyledContainer .e13ux8wu1 {
  height: 4px;
  margin-top: 14px;
  margin-bottom: 14px;
}

.cache-8fgrj3-StyledContainer .e13ux8wu3 {
  margin-top: 16px;
  font-size: 16px;
}

.cache-64yl8v-StyledStepContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.cache-1i14971-StyledStep-temporalStepStyles {
  border-radius: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background-color: #22c8a2;
}

.cache-8u0ti5-StyledText-variantStyles-colorStyles {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #ffffff;
}

.cache-8u0ti5-StyledText-variantStyles-colorStyles.cache-8u0ti5-StyledText-variantStyles-colorStyles {
  font-weight: 500;
}

.cache-iqnvfc-StyledText {
  margin-top: 16px;
  font-size: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  text-align: center;
}

.cache-1onazp5-StyledLine {
  border-radius: 2px;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  border-radius: 2px;
  background-color: #d4dae7;
  position: relative;
}

.cache-1onazp5-StyledLine::after {
  content: '';
  position: absolute;
  left: 0;
  top: 0;
  height: 100%;
  border-radius: 2px;
  background-color: #22c8a2;
  width: 100%;
}

.cache-1lwhthm-StyledLine-loadingStyle {
  border-radius: 2px;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  border-radius: 2px;
  background-color: #d4dae7;
  position: relative;
}

.cache-1lwhthm-StyledLine-loadingStyle::after {
  content: '';
  position: absolute;
  left: 0;
  top: 0;
  height: 100%;
  border-radius: 2px;
  background-color: #22c8a2;
  -webkit-animation: animation-0 1s linear infinite;
  animation: animation-0 1s linear infinite;
}

.cache-1k0r1aw-StyledStep-temporalStepStyles {
  border-radius: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background-color: transparent;
  border-style: solid;
  border-color: #d4dae7;
}

.cache-1c1gkbj-StyledText-variantStyles-colorStyles {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #b2b6c3;
}

.cache-1c1gkbj-StyledText-variantStyles-colorStyles.cache-1c1gkbj-StyledText-variantStyles-colorStyles {
  font-weight: 500;
}

<div
    class="cache-8fgrj3-StyledContainer e13ux8wu0"
  >
    <div
      class="cache-64yl8v-StyledStepContainer e13ux8wu5"
    >
      <div
        class="cache-1i14971-StyledStep-temporalStepStyles e13ux8wu4"
      >
        <div
          class="e1g1zfwd0 cache-8u0ti5-StyledText-variantStyles-colorStyles"
        >
          1
        </div>
      </div>
      <div
        class="cache-iqnvfc-StyledText e13ux8wu3"
      >
        Step 1
      </div>
    </div>
    <div
      class="cache-1onazp5-StyledLine e13ux8wu1"
    />
    <div
      class="cache-64yl8v-StyledStepContainer e13ux8wu5"
    >
      <div
        class="cache-1i14971-StyledStep-temporalStepStyles e13ux8wu4"
      >
        <div
          class="e1g1zfwd0 cache-8u0ti5-StyledText-variantStyles-colorStyles"
        >
          2
        </div>
      </div>
      <div
        class="cache-iqnvfc-StyledText e13ux8wu3"
      >
        Step 2
      </div>
    </div>
    <div
      class="cache-1lwhthm-StyledLine-loadingStyle e13ux8wu1"
    />
    <div
      class="cache-64yl8v-StyledStepContainer e13ux8wu5"
    >
      <div
        class="cache-1k0r1aw-StyledStep-temporalStepStyles e13ux8wu4"
      >
        <div
          class="e1g1zfwd0 cache-1c1gkbj-StyledText-variantStyles-colorStyles"
        >
          3
        </div>
      </div>
      <div
        class="cache-iqnvfc-StyledText e13ux8wu3"
      >
        Step 3
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CreationProgress renders correctly without animation 1`] = `
<DocumentFragment>
  .cache-8fgrj3-StyledContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.cache-8fgrj3-StyledContainer .e13ux8wu4 {
  height: 32px;
  width: 32px;
  font-size: 16px;
  line-height: 1;
  border-width: 3px;
}

.cache-8fgrj3-StyledContainer .e13ux8wu5 {
  margin: 0 8px;
  width: 32px;
  white-space: nowrap;
}

.cache-8fgrj3-StyledContainer .e13ux8wu5:first-of-type {
  margin-left: 0px;
}

.cache-8fgrj3-StyledContainer .e13ux8wu5:last-of-type {
  margin-right: 0px;
}

.cache-8fgrj3-StyledContainer .e13ux8wu1 {
  height: 4px;
  margin-top: 14px;
  margin-bottom: 14px;
}

.cache-8fgrj3-StyledContainer .e13ux8wu3 {
  margin-top: 16px;
  font-size: 16px;
}

.cache-64yl8v-StyledStepContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.cache-1i14971-StyledStep-temporalStepStyles {
  border-radius: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background-color: #22c8a2;
}

.cache-ub7j99-StyledIcon-sizeStyles {
  fill: #ffffff;
  height: 20px;
  width: 20px;
  min-width: 20px;
  min-height: 20px;
}

.cache-ub7j99-StyledIcon-sizeStyles.cache-ub7j99-StyledIcon-sizeStyles {
  vertical-align: middle;
}

.cache-iqnvfc-StyledText {
  margin-top: 16px;
  font-size: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  text-align: center;
}

.cache-1onazp5-StyledLine {
  border-radius: 2px;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  border-radius: 2px;
  background-color: #d4dae7;
  position: relative;
}

.cache-1onazp5-StyledLine::after {
  content: '';
  position: absolute;
  left: 0;
  top: 0;
  height: 100%;
  border-radius: 2px;
  background-color: #22c8a2;
  width: 100%;
}

.cache-rgwnp4-StyledLine {
  border-radius: 2px;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  border-radius: 2px;
  background-color: #d4dae7;
  position: relative;
}

.cache-rgwnp4-StyledLine::after {
  content: '';
  position: absolute;
  left: 0;
  top: 0;
  height: 100%;
  border-radius: 2px;
  background-color: #22c8a2;
}

.cache-1k0r1aw-StyledStep-temporalStepStyles {
  border-radius: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background-color: transparent;
  border-style: solid;
  border-color: #d4dae7;
}

.cache-10y1xlz-StyledFutureInternalDot {
  background-color: #d4dae7;
  height: 7px;
  width: 7px;
  border-radius: 16px;
}

<div
    class="cache-8fgrj3-StyledContainer e13ux8wu0"
  >
    <div
      class="cache-64yl8v-StyledStepContainer e13ux8wu5"
    >
      <div
        class="cache-1i14971-StyledStep-temporalStepStyles e13ux8wu4"
      >
        <svg
          class="sc-ui-icon etwatq50 cache-ub7j99-StyledIcon-sizeStyles"
          viewBox="0 0 24 24"
        >
          <path
            d="M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z"
          />
        </svg>
      </div>
      <div
        class="cache-iqnvfc-StyledText e13ux8wu3"
      >
        Step 1
      </div>
    </div>
    <div
      class="cache-1onazp5-StyledLine e13ux8wu1"
    />
    <div
      class="cache-64yl8v-StyledStepContainer e13ux8wu5"
    >
      <div
        class="cache-1i14971-StyledStep-temporalStepStyles e13ux8wu4"
      >
        <svg
          class="sc-ui-icon etwatq50 cache-ub7j99-StyledIcon-sizeStyles"
          viewBox="0 0 24 24"
        >
          <path
            d="M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z"
          />
        </svg>
      </div>
      <div
        class="cache-iqnvfc-StyledText e13ux8wu3"
      >
        Step 2
      </div>
    </div>
    <div
      class="cache-rgwnp4-StyledLine e13ux8wu1"
    />
    <div
      class="cache-64yl8v-StyledStepContainer e13ux8wu5"
    >
      <div
        class="cache-1k0r1aw-StyledStep-temporalStepStyles e13ux8wu4"
      >
        <div
          class="cache-10y1xlz-StyledFutureInternalDot e13ux8wu2"
        />
      </div>
      <div
        class="cache-iqnvfc-StyledText e13ux8wu3"
      >
        Step 3
      </div>
    </div>
  </div>
</DocumentFragment>
`;
